vaked/grammar/vaked-v0-plus.ebnf
# vaked grammar — Vaked capability-graph language, v0.4
#
# Notation:
#   "literal"      terminal (keyword or punctuation, matched verbatim)
#   { x }          zero or more repetitions of x
#   [ x ]          optional: zero or one occurrence of x
#   x | y          alternation (ordered: first match wins in ambiguous positions)
#   ( x )          grouping (does not affect semantics, only precedence)
#   rule = ... ;   one production rule, semicolon-terminated
#
# Whitespace separates tokens. A newline TERMINATES the current statement or
# record entry — block and record bodies ("{" "}") are newline-delimited, one
# statement/entry per line. Newlines are insignificant ONLY inside open "(" ")"
# and "[" "]" groupings, so argument lists and list literals may span lines.
# This bounds the `{ ident }` repetitions in `inherit` / `grant` and the
# `order` chains to the current line; in an `order_decl`, ";" separates chains
# and a chain list may continue across newlines after the ";". Within a
# statement, spaces and tabs are insignificant. Comments (#) run to end of
# line and are discarded by the lexer. Source files are UTF-8; keywords and
# identifiers are ASCII. (These rules are enforced by tests/spec.)
#
# ---- Design decisions (v0.2) -----------------------------------------------
#
# 1. Uniform applicative syntax (app).  All call-like forms — function calls,
#    named-block constructors, and bare references — share a single `app` rule:
#
#       ref [ "(" args ")" ] [ record ]
#
#    A bare dotted path is a ref-only app; a positional call adds parens; a
#    config block appends a record; all three can combine.  This replaces the
#    v0 split between `function_call`, `call_stmt`, and `block_stmt`.
#
# 2. Typed / parameterized declarations (parsed, not checked).  `decl` accepts
#    an optional `signature` (typed parameter list + optional return type).
#    The parser records the signature for future Goal-2 type checking; the v0.2
#    evaluator treats it as documentation only (no type errors are raised).
#
# 3. First-class graph block (`node` / `->`).  A `block` may contain `node`
#    declarations and `->` edges, making `mesh` (and any other graph-shaped
#    kind) expressible without special-casing those kinds in the grammar.
#
# 4. Backpressure deferred.  The `backpressure { when ... reduce ... }` form
#    from 0008-parallel-fibers-indexes-surfaces.md is intentionally absent.
#    It requires a conditional sub-language that is not yet designed; it is
#    tracked as a post-v0.2 extension.
#
# ---- Design decisions (v0.3 — the Goal-2 type layer) ------------------------
#
# v0.3 adds the *surface syntax* for the Vaked type system (Goal 2): the form
# in which users WRITE schemas, field constraints, and capability taxonomies.
# The accompanying checker (parse -> resolve -> elaborate -> check) is specified
# normatively in `docs/language/0011-type-system.md`; the built-in schema and
# capability catalog is `vaked/schema/parallel-types.md`.  The grammar here only
# fixes what is syntactically writable.  v0.3 is a STRICT SUPERSET of v0.2:
# every v0.2 file parses unchanged (the new statement forms are reached only by
# new leading soft keywords — `field`, `open`, `grant`, `order` — that do not
# begin any v0.2 statement; `capability` is added as a new `kind`).  There is no
# new `domain` keyword: a capability domain is named by the decl's `name`.
#
# 5. Schema field declarations with constraint refinements.  Inside a `schema`
#    block, a field is declared `field name : type { refinement }`.  The
#    refinement set is CLOSED and total (no user predicates / no expression
#    language): `required`, `optional`, `nonempty`, `default = expr`,
#    `oneof [ ... ]`, the comparisons `>= number` / `<= number` / `> number` /
#    `< number`, `in number .. number`, and `matches /regex/`.  A schema may be
#    declared `open` (one bare `open` statement in its block) to admit unknown
#    fields; the default is closed (unknown fields rejected by the checker).
#
# 6. Capability declarations.  A `capability` block declares one capability
#    DOMAIN.  Its body lists the domain's `grant` names and exactly one `order`
#    statement giving the attenuation partial order as a chain / set of chains
#    (`order none < repo_ro < repo_rw`).  Grants named in the order must be
#    declared; this is checked, not grammatical.  Capability VALUES elsewhere
#    are written with the existing `ref` form `domain.grant` (e.g. `fs.repo_rw`,
#    `network.none`) — no new value syntax is introduced.
#
# 7. regex terminal.  `matches` takes a `/.../ ` regex literal (`regex`).  The
#    regex body is opaque to the parser and validated by the checker against a
#    fixed, bounded dialect (see 0011); it is NOT a Vaked expression.
#
# 8. Soft keywords.  `field`, `open`, `grant`, `order` are SOFT keywords: they
#    introduce a v0.3 statement only in that statement's full shape (`field`
#    followed by `ident ":"`; `grant` followed by `ident`; `order` followed by
#    an `order_chain`; bare `open`).  `field_decl`/`grant_decl`/`order_decl` are
#    tried before `assignment` and self-disambiguate via their required second
#    token (e.g. `order = 3` falls through to `assignment` because `=` is not the
#    `<` an `order_chain` needs).  `open` is the one bare single-keyword form, so
#    `open_decl` is ordered AFTER `assignment`: `open = expr` parses as the v0.2
#    `assignment`, while a bare `open` (not followed by an assign-op) parses as
#    `open_decl`.  Thus no previously-legal v0.2 program changes meaning.
#
# ---- Design decisions (v0.4 — traversable execution tree) -------------------
#
# v0.4 adds the `lifecycle` block, which makes `parallel` and `fiber`
# declarations *traversable*: each node in the OTP supervision tree is
# addressable by path, and the runtime can deliver lifecycle events (pause,
# resume, stop, rewind) to any node.  The design is normatively specified in
# `docs/language/0013-traversable-execution.md`.
#
# 9. Lifecycle declarations.  A `lifecycle` block may appear inside `parallel`
#    or `fiber` declarations.  It contains `on <event> { parameters }` clauses
#    that declare control-point handlers.  `lifecycle` and `on` are SOFT keywords:
#    `lifecycle` self-disambiguates because no existing stmt begins with
#    `lifecycle`; `on` inside the lifecycle block self-disambiguates because the
#    only other stmt forms that could start with `on` would require `on` followed
#    by `=` (assignment) or an ident-chain (app/edge/decl), while `on <event>`
#    is always followed by one of four named lifecycle-event terminals.
#    `lifecycle_decl` is placed FIRST in the `stmt` alternatives so it is tried
#    before `field_decl` and the rest; this is safe because `lifecycle` is a
#    fresh leading token with no v0.3 or earlier clash.
#    The checker validates that `lifecycle` appears only in `parallel` / `fiber`
#    blocks (same pattern as `field_decl` meaningful only in `schema`).
#    `rewind` requires the enclosing `fiber` or `parallel` to reference an input
#    stream with `retention` set; the checker validates this and emits an error
#    for `on rewind` in declarations that lack retention.
#
# ---- Minor conventions ------------------------------------------------------
#
# Comments     `#` begins a line comment that runs to end of line (eol).
#              Comments are stripped by the lexer; they do not appear in the
#              AST or affect parsing.
#
# Interpolation  Inside a string, `${ref}` splices the value of `ref`.
#              The interpolation site is the `interp` production; `ref` inside
#              it obeys the same dotted-ident rule as everywhere else.
#
# Inherit      `inherit foo bar` copies the bindings named `foo` and `bar`
#              from the enclosing scope into the current record / block.
#              Mirrors Nix `inherit`.
#
# Annotations  `@name` or `@name(args)` decorates the immediately following
#              `decl`.  Annotations are parsed and preserved in the AST;
#              their semantics are defined per-annotation by the compiler.
#
# Raw Nix      `nix("…")` is a conventional `app` whose ref is the plain
#              identifier `nix`; the string argument is an opaque Nix
#              expression fragment passed through to the emitter unchanged.
#              There is no special grammar production for it.
#
# ---- File structure ---------------------------------------------------------

file        = { item } ;
item        = decl | import ;
import      = "use" string ;

# ---- Declarations -----------------------------------------------------------

decl        = { annotation } kind name [ signature ] block ;
name        = ident | string ;
signature   = "(" [ param { "," param } ] ")" [ "->" type ] ;
param       = ident ":" type [ "=" expr ] ;
kind        = "runtime" | "input"   | "engine"        | "host"
            | "network" | "filesystem" | "mcp"        | "ebpf"
            | "budget"  | "observability" | "runclass" | "workflow"
            | "index"   | "catalog" | "stream"         | "fiber"
            | "surface" | "mesh"    | "device"         | "mediaPipeline"
            | "parallel" | "schema" | "capability" ;

# ---- Block and statements ---------------------------------------------------
#
# `stmt` alternatives are ORDERED (first match wins).  `lifecycle_decl` (v0.4)
# is listed first: `lifecycle {` is a fresh token sequence that did not begin
# any v0.2/v0.3 statement, so it cannot change how any prior file parses.  The
# v0.3 type-layer statements (`field_decl`, `open_decl`, `grant_decl`,
# `order_decl`) follow; each begins with a reserved leading keyword (`field`,
# `open`, `grant`, `order`) that does not start any v0.2 statement.  All these
# statements are syntactically legal in any block, but are MEANINGFUL only
# inside their respective declaration kinds; the checker (0011) rejects them
# elsewhere.  The grammar stays uniform: no per-kind block grammars.

block       = "{" { stmt } "}" ;
stmt        = lifecycle_decl
            | field_decl
            | grant_decl
            | order_decl
            | assignment
            | open_decl
            | inherit_stmt
            | edge
            | node_decl
            | decl
            | app ;
assignment  = ident assign_op expr ;
assign_op   = "=" | "?=" ;
inherit_stmt = "inherit" ident { ident } ;

# Graph constructs (used in mesh, device, mediaPipeline, etc.)
node_decl   = "node" name block ;
edge        = ref "->" ref { "->" ref } [ ":" string ] ;

# ---- Schema field declarations (v0.3) ---------------------------------------
#
# A `schema` block declares the record type and constraints of one Vaked kind
# (built-in or user-defined).  Each field gives a name, a type, and an optional
# brace-delimited list of refinements drawn from the CLOSED constraint set.  An
# empty refinement list `{}` may be omitted: `field name : type` is shorthand
# for `field name : type {}` (a required field with no further constraint, per
# the default in 0011).  `open_decl` marks the schema as accepting unknown
# fields.

field_decl  = "field" ident ":" type [ "{" { refinement } "}" ] ;
open_decl   = "open" ;

# CLOSED refinement set — total, side-effect-free, no user predicates.
refinement  = "required"
            | "optional"
            | "nonempty"
            | "default" "=" expr
            | "oneof" list
            | cmp_ref
            | range_ref
            | "matches" regex ;
cmp_ref     = ( ">=" | "<=" | ">" | "<" ) number ;
range_ref   = "in" number ".." number ;

# ---- Capability declarations (v0.3) -----------------------------------------
#
# A `capability` block declares ONE capability domain: the `name` of the decl
# is the domain (e.g. `capability fs { ... }`).  The body lists the domain's
# grants and exactly one attenuation order.  An `order` is one or more chains
# separated by ";"; within a chain, `a < b` means "a is the WEAKER (more
# attenuated) grant" (i.e. a <= b in the order).  Consequently a holder of `b`
# may delegate `a` (authority only decreases along delegation), but a holder of
# `a` may NOT delegate `b`.  See 0011 §4.  Each grant named in an order must be
# declared by a `grant` statement (checked, not grammatical).

grant_decl  = "grant" ident { ident } ;
order_decl  = "order" order_chain { ";" order_chain } ;
order_chain = ident "<" ident { "<" ident } ;

# ---- Lifecycle declarations (v0.4 — traversable execution tree) -------------
#
# A `lifecycle` block may appear inside `parallel` or `fiber` declarations.
# It declares control-point handlers for pause / resume / stop / rewind.
# `lifecycle` is a soft keyword: self-disambiguating because no existing stmt
# begins with `lifecycle`.  `on` inside the lifecycle block is likewise soft.
# The `record` body (braces with assignments only) holds event parameters.
#
# `rewind` requires an input stream with `retention` set; checker validates
# this.  `lifecycle` blocks are meaningful only in `parallel` / `fiber`; the
# checker rejects them elsewhere (same pattern as field_decl in non-schema).

lifecycle_decl  = "lifecycle" "{" { on_clause } "}" ;
on_clause       = "on" lifecycle_event record ;
lifecycle_event = "pause" | "resume" | "stop" | "rewind" ;

# ---- Expressions ------------------------------------------------------------

expr        = literal | list | record | app ;
app         = ref [ "(" [ arg { "," arg } ] ")" ] [ record ] ;
arg         = expr ;
ref         = ident { "." ident } ;
record      = "{" { assignment | inherit_stmt } "}" ;
list        = "[" [ expr { "," expr } ] "]" ;
literal     = string | number | bool | path | duration | bytes | "null" ;

# ---- Types (parsed, not yet checked) ----------------------------------------
#
# Type syntax is accepted and stored in the AST but is not validated by the
# v0.2 evaluator.  Type checking is Goal 2.

type        = type_atom { "|" type_atom } ;
type_atom   = qualname [ "<" type { "," type } ">" ]
            | "(" [ type { "," type } ] ")" "->" type ;
qualname    = ident { "." ident } ;

# ---- Annotations ------------------------------------------------------------

annotation  = "@" ident [ "(" [ arg { "," arg } ] ")" ] ;

# ---- Lexical terminals ------------------------------------------------------
#
# Comments are stripped by the lexer before parsing; they do not appear in
# any grammar production's RHS.  They are documented here for completeness.

comment     = "#" { any } eol ;

string      = '"' { char | interp } '"' ;
interp      = "${" ref "}" ;

# Regex literal — used only by the `matches` refinement (v0.3).  Delimited by
# "/".  The body is opaque to the parser; the checker validates it against a
# fixed bounded dialect (anchored, no backreferences) defined in 0011.
regex       = "/" { regex_char } "/" ;
regex_char  = ? any Unicode scalar value except '/' and a line terminator,
                or the two-character escape "\/" denoting a literal '/' ? ;

# Numeric and unit literals
number      = [ "-" ] digit { digit } [ "." digit { digit } ] ;
bool        = "true" | "false" ;
path        = "." ( "/" | letter ) { path_char } ;
duration    = digit { digit } ( "ns" | "us" | "ms" | "s" | "m" | "h" | "d" ) ;
bytes       = digit { digit } ( "B" | "KB" | "MB" | "GB" | "TB" ) ;

# Character-level productions
ident       = letter { letter | digit | "_" | "-" } ;
letter      = ? ASCII letter: a-z or A-Z ? ;
digit       = ? ASCII decimal digit: 0-9 ? ;
char        = ? any Unicode scalar value except '"' and '\',
                or a JSON-style escape sequence: \" \\ \/ \b \f \n \r \t \uXXXX ? ;
path_char   = letter | digit | "/" | "_" | "-" | "." ;
any         = ? any Unicode scalar value ? ;
eol         = ? U+000A (line feed) or U+000D U+000A (CRLF) ? ;
